# task-board-api

./: .dockerignore  .gitignore  Dockerfile  README.md  admin.py  alembic.ini  compose.yaml  database.py  docker-entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  schemas.py  to-be-implemented.md
auth/: __init__.py  constants.py  utils.py
migrations/: env.py
migrations/versions/: 3260cb28c177_add_hashed_password_field_to_users.py  d3e2af3482cc_add_created_at_to_tasks_and_boards.py
models/: __init__.py
models/associations/: board_member.py
models/entities/: board.py  user.py
repositories/: __init__.py  board.py  board_member.py  boards.py  task.py  user.py
routes/: auth.py  board.py  boards.py  task.py  tasks.py  user.py  users.py
routes/boards/: boards.py  members.py  tasks.py
schemas/: __init__.py  auth.py  board.py  board_member.py  common.py  task.py  user.py
services/: __init__.py  auth.py  board.py  board_member.py  task.py  user.py
src/: admin.py  database.py  env_vars.py  main.py  models.py
src/auth/: __init__.py  constants.py  types.py  utils.py
src/migrations/: env.py
src/migrations/versions/: a27fe53e3f87_create_user_model.py  c4227e9101a0_rename_user_to_username.py  f57d9da72a4b_change_board_members_primary_keys_from_.py  f93becebbdd0_add_unique_constraint_on_users_username.py
src/models/: __init__.py
src/models/associations/: board_member.py
src/models/entities/: task.py
src/repositories/: board.py  board_member.py  user.py
src/services/: __init__.py  board.py  task.py  user.py
src/shared/types/: board_member.py
