[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-fastapi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.0",
    "sqladmin>=0.27.0",
    "sqlalchemy>=2.0",
    "alembic",
    "uvicorn[standard]",
]

[tool.setuptools]
packages = []

[tool.fastapi]
entrypoint = "main:app"
